# track

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  deps.py  main.py  models.py  run.py  schemas.py  serializers.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/routers/: auth.py  boards.py  cards.py  checklists.py  images.py  labels.py  lists.py  notifications.py  timer.py  users.py
backend/app/services/: email.py  notifications.py
backend/config/: admin.yaml  system.example.yaml
backend/data/: track.db
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/boards/: BoardCard.vue  CreateBoardForm.vue
frontend/src/components/cards/: AssigneeSection.vue  CardEditor.vue  CardModal.vue  ChecklistSection.vue  ConfirmDeleteDialog.vue  (+4 more)
frontend/src/router/: guards.js  index.js
frontend/src/services/: authService.js  axios.js  boardService.js  cardService.js  checklistService.js  imageService.js  labelService.js  listService.js  notificationService.js  timerService.js  userService.js
frontend/src/stores/: authStore.js  boardStore.js  cardStore.js  notificationStore.js  timerStore.js  uiStore.js
frontend/src/styles/: base.css  base.less  tokens.less
frontend/src/views/: AdminUsersView.vue  BoardCalendarView.vue  BoardListView.vue  KanbanBoardView.vue  LoginView.vue
frontend/test-results/: .last-run.json
frontend/tests/e2e/: smoke.spec.js
(+21 files in other folders)
